arreglos responsividad sercotec

--- a/frontEnd/ISOQuality/ISOQuality/quienessomos.html
+++ b/frontEnd/ISOQuality/ISOQuality/quienessomos.html
@@ -134,8 +134,8 @@
                     <div class="col d-none d-lg-block">
                         <div id="qs_vision" class="image-container">
                             <img src="assets/img/carrusel-index/reunion-1.jpeg" class="img-fluid p-1">
-                            <img src="assets/img/carrusel-index/reunion-1.jpeg" class="img-fluid p-1">
-                            <img src="assets/img/carrusel-index/reunion-1.jpeg" class="img-fluid p-1">
+                            <img src="assets/img/fotos-seminario-corfo/IMG_2429.jpg" class="img-fluid p-1">
+                            <img src="assets/img/fotos-seminario-corfo/IMG_2204.jpg" class="img-fluid p-1">
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-8">
