--- a/frontEnd/ISOQuality/ISOQuality/sercotec.html
+++ b/frontEnd/ISOQuality/ISOQuality/sercotec.html
@@ -12,8 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap">
   <link rel="stylesheet" href="assets/style.css">
-  <!-- JQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
   <!--   Iconos de footer -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -28,7 +28,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-right: 5%;
+
     font-weight: bolder;
   }
 
@@ -38,7 +38,6 @@
     background-repeat: no-repeat;
     background-position: center center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-right: 5%;
     font-weight: bolder;
   }
 
@@ -48,7 +47,6 @@
     background-repeat: no-repeat;
     background-position: center center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-right: 5%;
     font-weight: bolder;
 
   }
@@ -59,15 +57,9 @@
     background-repeat: no-repeat;
     background-position: center center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    margin-right: 5%;
     font-weight: bolder;
   }
 
-  .card-info {
-    margin-left: 15%;
-
-
-  }
 </style>
 
 <body>
@@ -84,50 +76,50 @@
     </div>
     <div class="row">
       <div class="col">
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg center-text pb-3" id="navbar">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a href="index.html" class="nav-link"><b>Inicio</b></a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <b>Sistemas de Gestión</b>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-start border-0" aria-labelledby="navbarDropdown">
-                    <li><a href="menuIso.html" class="dropdown-item">ISO 9001</a></li>
-                    <li><a href="menuIso.html" class="dropdown-item">ISO 14001</a></li>
-                    <li><a href="menuIso.html" class="dropdown-item">ISO 45001 (Antigua 18001)</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <b>Proyectos y Postulaciones</b>
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-start border-0" aria-labelledby="navbarDropdown">
-                    <li><a href="sercotec.html" class="dropdown-item">SERCOTEC</a></li>
-                    <li><a href="corfo.html" class="dropdown-item">CORFO</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a href="serviciosycapacitaciones.html" class="nav-link"> <b>Capacitaciones y Eventos</b></a>
-                </li>
-                <li class="nav-item">
-                  <a href="contacto.html" class="nav-link"> <b>Contacto</b></a>
-                </li>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg center-text pb-3" id="navbar">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link"><b>Inicio</b></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <b>Sistemas de Gestión</b>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-start border-0" aria-labelledby="navbarDropdown">
+                <li><a href="menuIso.html" class="dropdown-item">ISO 9001</a></li>
+                <li><a href="menuIso.html" class="dropdown-item">ISO 14001</a></li>
+                <li><a href="menuIso.html" class="dropdown-item">ISO 45001 (Antigua 18001)</a></li>
               </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <b>Proyectos y Postulaciones</b>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-start border-0" aria-labelledby="navbarDropdown">
+                <li><a href="sercotec.html" class="dropdown-item">SERCOTEC</a></li>
+                <li><a href="corfo.html" class="dropdown-item">CORFO</a></li>
               </ul>
-            </div>
-          </div>
-        </nav>
+            </li>
+            <li class="nav-item">
+              <a href="serviciosycapacitaciones.html" class="nav-link"> <b>Capacitaciones y Eventos</b></a>
+            </li>
+            <li class="nav-item">
+              <a href="contacto.html" class="nav-link"> <b>Contacto</b></a>
+            </li>
+          </ul>
+          </ul>
+        </div>
+      </div>
+    </nav>
       </div>
     </div>
     <!-- MAIN CONTENT -->
@@ -137,7 +129,7 @@
       mt-3 text-center">
           Asesoramiento y Acompañamiento en la Obtención de Fondos Públicos
         </h3>
-        <p class="text-justify mb-4">
+        <p class="text-center mb-4">
 
           Asesoramos y acompañamos en el proceso de postulación a micro, pequeñas y medianas empresas que están
           interesadas mediante la Formulación de Proyectos para la obtención de fondos públicos de fomento
@@ -146,8 +138,8 @@
           necesario para maximizar tus posibilidades de éxito.
         </p>
       </div>
-      <div class="row">
-        <div class="col-lg-3 col-md-6 mb-4">
+      <div class="row mb-4">
+        <div class="col">
           <div class="card card-semilla text-light">
             <div class="card-header text-center pt-4">
               <img class="aligncenter" id="logoS" src="assets/img/imagenes/icono_web_semilla.png" alt="Logo Semilla">
@@ -159,7 +151,7 @@
               </h3>
               <button type="button" class="btn btn-primary btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluación Gratuita
+                Evaluacion Gratuita
               </button>
             </div>
             <div class="card-body">
@@ -181,7 +173,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 mb-4">
+        </div>
+        <div class="row mb-4">
+        <div class="col">
           <div class="card card-abeja text-light">
             <div class="card-header text-center pt-4">
               <img class="aligncenter" id="logoA" src="assets/img/imagenes/icono_web_abeja.png" alt="Logo Abeja">
@@ -193,7 +187,7 @@
               </h3>
               <button type="button" class="btn btn-warning btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluación Gratuita
+                Evaluacion Gratuita
               </button>
             </div>
             <div class="card-body">
@@ -214,7 +208,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 mb-4">
+      </div>
+      <div class="row mb-4">
+        <div class="col">
           <div class="card card-crece text-light">
             <div class="card-header text-center pt-4">
               <img class="aligncenter" id="logoS" src="assets/img/icono_web_crece.png" alt="Logo Semilla">
@@ -226,14 +222,14 @@
               </h3>
               <button type="button" class="btn btn-success btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluación Gratuita
+                Evaluacion Gratuita
               </button>
             </div>
             <div class="card-body">
               <ol class="list-unstyled mb-0">
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-success me-3"></i>Busca fortalecer la
-                  gestión de las micro y pequeñas empresas y cooperativas.
+                  gestión de las micro y pequeñas empresas y cooperativas
                 </li>
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-success me-3"></i>Entrega un subsidio de $5.000.000, no
@@ -247,7 +243,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 mb-4">
+      </div>
+      <div class="row mb-4">
+        <div class="col">
           <div class="card card-gremio text-light">
             <div class="card-header text-center pt-4">
               <img class="aligncenter" id="logoS" src="assets/img/icono_reac_nac_reg.png" alt="Logo Semilla">
@@ -259,7 +257,7 @@
               </h3>
               <button type="button" class="btn btn-secondary btn-rounded w-100 mb-3"
                 onclick="window.location.href='contacto.html'">
-                Evaluación Gratuita
+                Evaluacion Gratuita
               </button>
             </div>
             <div class="card-body">
@@ -267,12 +265,12 @@
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-secondary me-3"></i>Apoya el fortalecimiento de organizaciones
                   representativas de micro y pequeñas
-                  empresas.
+                  empresas
                 </li>
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-secondary me-3"></i>Un subsidio no reembolsable de hasta $10
                   millones
-                  para la implementación de un proyecto.
+                  para la implementación de un proyecto
                 </li>
                 <li class="mb-3">
                   <i class="fas fa-info-circle text-secondary me-3"></i>Emprendedores y emprendedoras
@@ -283,36 +281,37 @@
           </div>
         </div>
       </div>
+      </div>
     </main>
-    <!-- Footer -->
-    <div class="container-fluid pt-2 px-3">
-      <footer class="text-center bg-transparent" id="footer">
-        <div class="text-center pt-3 pb-3">
-          <div class="row">
-            <div class="col-sm-3 order-first order-md-first">
-              <div class="d-flex align-items-center">
-                <i class="fas fa-envelope me-2"></i>
-                <p class="mb-0 text-sm">clientes@isoquality.cl</p>
-              </div>
-              <div class="d-flex align-items-center">
-                <i class="fas fa-phone me-2"></i>
-                <p class="mb-0 text-sm">+56 9 9733 3032</p>
-              </div>
+   <!-- Footer -->
+   <div class="container-fluid pt-2 px-3">
+    <footer class="text-center bg-transparent" id="footer">
+      <div class="text-center pt-3 pb-3">
+        <div class="row">
+          <div class="col-sm-3 order-first order-md-first">
+            <div class="d-flex align-items-center">
+              <i class="fas fa-envelope me-2"></i>
+              <p class="mb-0 text-sm">clientes@isoquality.cl</p>
             </div>
-            <div class="col-sm-9 order-last order-md-last pt-3">
-              <div class="d-flex flex-column flex-md-row justify-content-end align-items-center ">
-                <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Logros</a>
-                <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Clientes</a>
-                <a class="btn me-2 text-sm text-md text-truncate" href="quienessomos.html" role="button">Quiénes
-                  Somos</a>
-                <a class="btn me-2 text-sm text-md" href="contacto.html" role="button">Contacto</a>
-                <p class="mb-0 text-sm text-md text-truncate">© 2023 ISO Quality</p>
-              </div>
+            <div class="d-flex align-items-center">
+              <i class="fas fa-phone me-2"></i>
+              <p class="mb-0 text-sm">+56 9 9733 3032</p>
+            </div>
+          </div>
+          <div class="col-sm-9 order-last order-md-last pt-3">
+            <div class="d-flex flex-column flex-md-row justify-content-end align-items-center ">
+              <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Logros</a>
+              <a class="btn me-2 text-sm text-md text-truncate" href="logrosyclientes.html" role="button">Clientes</a>
+              <a class="btn me-2 text-sm text-md text-truncate" href="quienessomos.html" role="button">Quiénes
+                Somos</a>
+              <a class="btn me-2 text-sm text-md" href="contacto.html" role="button">Contacto</a>
+              <p class="mb-0 text-sm text-md text-truncate">© 2023 ISO Quality</p>
             </div>
           </div>
         </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
+  </div>
   </div>
   <!-- Etiquetas de Bootstrap -->
   <script src="assets/main.js"></script>
