--- a/frontEnd/ISOQuality/ISOQuality/serviciosycapacitaciones.html
+++ b/frontEnd/ISOQuality/ISOQuality/serviciosycapacitaciones.html
@@ -127,7 +127,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/img/fotos-seminario-corfo/IMG_2139.jpg" class="d-block w-100"
+            <img src="assets/img/fotos-seminario-corfo/IMG_2139.jpg" style="height:450px ;" class="d-block w-100"
               alt="Cultura y Clima organizacional">
             <div class="carousel-caption d-none d-md-block">
               <h3>Seminarios</h3>
