--- a/frontEnd/ISOQuality/ISOQuality/quienessomos.html
+++ b/frontEnd/ISOQuality/ISOQuality/quienessomos.html
@@ -120,7 +120,7 @@
 
                                 <h5>Cofundador / Consultor Senior</h5>
 
-                                <p>dsaldias@isoquiality.cl</p>
+                                <p>daniel@isoquality.cl</p>
 
                             </div>
                             <div class="action">
